1999-11-05  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* docs/multiboot.texi (Boot information format): Add the members
	`drives_addr' and `drives_count' into the Multiboot information
	structure, and added the descriptions.
	
1999-11-03  Gordon Matzigkeit  <gord@fig.org>

	* util/mbchk.c (main): Move the version number inside the
	parentheses since it is the GRUB package version, not just an
	mbchk-specific version.

1999-10-30  Gordon Matzigkeit  <gord@fig.org>

	* debian/rules (binary-arch): Compress man pages.
	Strip the grub shell.
	Install examples.

1999-11-03  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* docs/tutorial.texi: Fix typos by ispell.
	* docs/user-ref.texi: Likewise.
	* docs/prog-ref.texi: Likewise.
	* docs/appendices.texi: Likewise.

1999-11-03  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/fsys_ext2fs.c (struct ext2_dir_entry): Changed the type
	of `name_len' to __u8 and added the new member `file_type' after
	it. This is stolen from linux/ext2_fs.h in Linux 2.2.13.
	Reported by Ben Harris <bjh21@cam.ac.uk>.

	* stage2/builtins.c (device_func) [GRUB_UTIL]: Call
	nul_terminate before calling check_device.

1999-11-02  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/disk_io.c (real_open_partition): Check for the right
	partition for any extended partition as well. Set EXT to I after
	the check is done. Reported by Jeff Scheinberg
	<jeffsh@erols.com>.

	* stage2/builtins.c (color_func): Use the function
	nul_terminate.
	(device_func) [GRUB_UTIL]: Likewise.
	(help_func): Likewise.
	(install_func): Save CURRENT_DRIVE, CURRENT_PARTITION and
	BUG_GEOM in SRC_DRIVE, SRC_PARTITION and SRC_GEOM respectively,
	and use them when patching the Stage 2.
	NUL-terminate the configuration filename CONFIG_FILENAME.
	If IS_STAGE1_5 is true, then check if the "real config file"
	option is present, and, if so, patch the Stage 2 CONFIG_FILENAME
	with the configuration filename REAL_CONFIG_FILENAME.